Changed status to state
